@@ -2,6 +2,7 @@ Changelog for Hitman
 
 x.x xxxx-xx-xx
  - Now using 2-columnm tabular format instead of QIIME for input mapping files
+ - Input can now be SFF or FASTQ files
 
 0.1 2014-03-13
  - Initial version
